--- a/readme.mkd
+++ b/readme.mkd
@@ -1,5 +1,7 @@
 #### 實習生parser 列表
 
+說明
+---
 
 待parser
 ---
@@ -25,6 +27,8 @@ compare| 評比
 keywords| 關鍵字
 fb_like| fb 按讚數(可選)
 fb_share| fb share 數(可選)
+category| 類別
+
 
 需求spec
 ---
@@ -47,8 +51,9 @@ def parser_page(url):
         "content": string
         "compare": string
         "keyword": [string, string, ...]
-        fb_like: int
-        fb_share: int
+        "fb_like": int
+        "fb_share": int
+        "category": [category, category]
     }
 ```
 
