--- a/readme.mkd
+++ b/readme.mkd
@@ -8,7 +8,7 @@
 
 1. 科技新報        http://technews.tw/2016/01/04/tiobe-2015-programming-language-index/
 2. 新頭殼      http://newtalk.tw/news/view/2016-01-14/69148
-3. 三立新聞網      http://www.setn.com/News.aspx?NewsID=118251
+3. 三立新聞網      http://www.setn.com/News.aspx?NewsID=118251  #AaronLai_intern
 4. 數位時代        http://www.bnext.com.tw/article/view/id/37335
 
 需要欄位
