--- a/readme.mkd
+++ b/readme.mkd
@@ -12,7 +12,7 @@
 2. 新頭殼      http://newtalk.tw/news/view/2016-01-14/69148 #
 3. 三立新聞網      http://www.setn.com/News.aspx?NewsID=118251  #AaronLai_intern
 4. 數位時代        http://www.bnext.com.tw/article/view/id/37335  #tsaiJN
-5. 華視新聞     http://news.cts.com.tw/
+5. 華視新聞     http://news.cts.com.tw/ #sharon
 6. tvbs         http://news.tvbs.com.tw/
 
 需要欄位
